--- a/carousel.css
+++ b/carousel.css
@@ -731,10 +731,10 @@ p::before {
 }
 .album .location-container{
   position: absolute;
-  bottom: 50px;
+  bottom: -150px;
   width: 80%;
+  z-index: 1;
 }
-
 
 
  /*----------------footer--------------*/
